Switched to minor versions in version string

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [versioneer]
 VCS = git
-style = pep440-pre
+style = pep440-minor
 versionfile_source = duk/_version.py
 versionfile_build = duk/_version.py
 tag_prefix = 
