--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 readme = {file = "README.md", content-type = "text/markdown"}
 dependencies = []
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dynamic = ["version"]
 classifiers = [
     "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
@@ -23,6 +23,10 @@ homepage = "https://github.com/wvangeit/duk"
 
 [build-system]
 requires = ["setuptools>=42", "wheel", "setuptools_scm"]
+
+[tool.setuptools]
+packages = ["duk"]
+package-dir = {"duk" = "duk"}
 
 [tool.setuptools_scm]
 version_file = "duk/_version.py"
