--- a/.github/workflows/healthchecks.yml
+++ b/.github/workflows/healthchecks.yml
@@ -8,13 +8,15 @@ on:
 
 jobs:
   keepalive-job:
-    name: Keepalive Workflow
     runs-on: ubuntu-latest
     permissions:
       actions: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: gautamkrishnar/keepalive-workflow@v2
+      - name: Keepalive Workflow
+        env:
+          GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN || github.token }}
+        shell: sh
+        run: gh api -X PUT "repos/ITISFoundation/itis-dakota/actions/workflows/buildwheels.yml/enable"
   ping-success:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master' && github.event.workflow_run.conclusion == 'success'
