--- a/.github/workflows/healthchecks.yml
+++ b/.github/workflows/healthchecks.yml
@@ -16,14 +16,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN || github.token }}
         shell: sh
-        run: gh api -X PUT "repos/ITISFoundation/itis-dakota/actions/workflows/buildwheels.yml/enable"
+        run: gh api -X PUT "repos/wvangeit/duk/actions/workflows/buildwheels.yml/enable"
   ping-success:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' && github.event.workflow_run.conclusion == 'success'
+    if: github.ref == 'refs/heads/master' && github.event.workflow_run.conclusion == 'success' && needs.keepalive-job.result == 'success'
+    needs: keepalive-job
     steps:
       - run: curl -m 10 --retry 5 ${{ secrets.HEALTHCHECKS_PING_URL }}
   ping-failure:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' && github.event.workflow_run.conclusion == 'failure'
+    needs: keepalive-job
+    if: github.ref == 'refs/heads/master' && (github.event.workflow_run.conclusion == 'failure' || needs.keepalive-job.result == 'failure')
     steps:
       - run: curl -m 10 --retry 5 ${{ secrets.HEALTHCHECKS_PING_URL }}/fail
