--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -27,8 +27,8 @@ jobs:
                   WITH_V: false
                   DEFAULT_BUMP: patch
 
-    wheels:
-        name: Build wheel on ${{ matrix.python }} ${{ matrix.arch }}
+    dist:
+        name: Build dist on ${{ matrix.python }} ${{ matrix.arch }}
         runs-on: ${{ matrix.github-runner }}
         strategy:
             fail-fast: true
@@ -57,17 +57,18 @@ jobs:
               uses: actions/setup-python@v5
               with:
                   python-version: ${{ matrix.python }}
-            - name: Build wheel
-              run: pip wheel -w wheelhouse .
+            - name: Build dist
+              run: make dist
             - name: Run tests
               run: |
                 make test
-            - name: Upload wheels
+            - name: Upload dist
               uses: actions/upload-artifact@v4
               with:
-                name: wheels-${{ matrix.os }}-${{ matrix.wheel-platform }}
-                path: ./wheelhouse/*.whl
-
+                name: dist-${{ matrix.os }}-${{ matrix.wheel-platform }}
+                path: |
+                  ./dist/*.whl
+                  ./dist/*.tar.gz
     release:
         name: Create new github release
         runs-on: ubuntu-latest
@@ -76,7 +77,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         needs: 
           - tag
-          - wheels
+          - dist
         steps:
             - uses: actions/checkout@v4
               with:
@@ -87,10 +88,10 @@ jobs:
               with:
                 tag: ${{ needs.tag.outputs.new_tag }}
                 generateReleaseNotes: true
-                artifacts: wheels-*
+                artifacts: dist-*
 
     test-pypi:
-        name: Publish wheels on Test PyPI
+        name: Publish dist on Test PyPI
         runs-on: ubuntu-latest
         needs:
             - release
@@ -104,7 +105,7 @@ jobs:
             - name: Download all artifacts
               uses: actions/download-artifact@v4
               with:
-                  pattern: wheels-*
+                  pattern: dist-*
                   path: dist
                   merge-multiple: true
             - name: Publish package to PyPI
@@ -113,7 +114,7 @@ jobs:
                   repository-url: https://test.pypi.org/legacy/
     
     pypi:
-        name: Publish wheels on PyPI
+        name: Publish dist on PyPI
         runs-on: ubuntu-latest
         needs:
             - test-pypi
@@ -127,7 +128,7 @@ jobs:
             - name: Download all artifacts
               uses: actions/download-artifact@v4
               with:
-                  pattern: wheels-*
+                  pattern: dist-*
                   path: dist
                   merge-multiple: true
             - name: Publish package to PyPI
