--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 name = "duk"
 description = "Python wrapper around the du -ks command. It will show you a histogram of the disk usage in a directory"
 
-license = { file = "LICENSE.txt" }
+license = "LGPL-3.0-or-later"
+license-files = [ "LICENSE.txt" ]
 authors = [
     {name="Werner Van Geit"}
 ]
@@ -11,7 +12,6 @@ dependencies = []
 requires-python = ">=3.9"
 dynamic = ["version"]
 classifiers = [
-    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
     "Topic :: Utilities"
 ]
 
