--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -83,6 +83,8 @@ jobs:
               uses: actions/download-artifact@v4
               with:
                   pattern: dist-*
+                  path: dist
+                  merge-multiple: true
             - uses: actions/checkout@v4
               with:
                   fetch-depth: 0
