--- a/.github/workflows/buildwheels.yml
+++ b/.github/workflows/buildwheels.yml
@@ -65,7 +65,7 @@ jobs:
             - name: Upload dist
               uses: actions/upload-artifact@v4
               with:
-                name: dist-${{ matrix.os }}-${{ matrix.wheel-platform }}
+                name: dist-${{ matrix.python }}-${{ matrix.wheel-platform }}
                 path: |
                   ./dist/*.whl
                   ./dist/*.tar.gz
